css/styles.css
/* ... */
.cloud-back {
  -webkit-animation: 25s cloud-move-reverse infinite alternate linear;
  animation: 25s cloud-move-reverse infinite alternate linear;
}

/*--------------ANIMATIONS END-------------*/
/*
------------------Contact form----------
*/

.information{
  display: inline-block;
  align-items: center;
}

.cover-photo{
  width: 100%;

}

.contact-form-wrapper {
  width: 100%;
  max-width: 750px;
  height: 600px;
  margin: auto;
  align-items: center;
  background-color: rgba(255,255,255, .1);
  border-radius: 25px 25px 0 0;
  z-index: -1;
  position: relative;
}

.contact-element{
  width: 75%;
  height: 40px;
  margin: 10px 0;
  text-align: left;
  padding-left: 15px;
  background: #392038;
  border: none;
  border-bottom: 1px solid rgba(66, 178, 200, .5);

}

.contact-element::placeholder{
  color: rgb(66, 178, 200);
  font-size: 16px;
  font-weight: 300;
  opacity: .5;
  text-align: left;
}

.contact-form-mail{
  height: 60px;
  width: auto;
}

.form-control {
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
  position: absolute;
  width: 100%;
  max-width: 600px;
}

.form-control:nth-child(2){
  margin-top: 70px;
}

.form-control:nth-child(3){
  margin-top: 140px;
}

.form-control:nth-child(4){
  margin-top: 210px;
}

.form-control:nth-child(5){
  margin-top: 280px;
}

.form-control:nth-child(6){
  margin-top: 350px;
}

.form-element {
  flex: 0 1 200px;
}

.standard-label{
  text-align: left;
}

.button__submit {
  z-index: 1;
  padding: 5px 75px;
  margin-top: 20px;
  background-color: inherit;
  border: none;
  box-shadow: none;
  animation:  send 1.5s infinite;
}

.button__submit:hover,
.button__submit:active{
  box-shadow: none;
}

@keyframes send {
  0%{
    transform: translate3d(-5px, 5px, 2px);
  }
  80%{
    transform: translate3d(5px, -5px, -2px);
  }
  100%{
    transform: translate3d(-5px, 5px, 2px);
  }
}

/*
------------------Contact form end----------
*/
/*fallback*/
.project-list__item {
  display: inline-block;
  width: 33%;
}

/*end fallback*/
@supports (display: grid) {
  .project-list {
    display: grid;
    grid-gap: 10px;
    grid-template-columns: 1fr 1fr 1fr;
    /*grid-template-rows: 300px 300px;*/
    margin: 0;
    margin-bottom: 70px;
  }

  .project-list__item {
    background-color: rgba(104, 12, 6, 0.1);
    border-radius: 10px;
    min-height: auto;
    margin: 0;
    padding: 0 5px;
    width: auto;
  }

  .project-list__item:last-child {
    grid-column: 3/3;
    grid-row: 1/3;
  }

  .project-list__full-row-item {
    grid-column: 1/4;
    grid-row: 3/3;
  }
}

.about-me,
.table {
  max-width: 1000px;
  margin: auto;
  margin-bottom: 70px;
  padding-bottom: 20px;
  padding-top: 0;
  display: grid;
  grid-template-columns: 1fr;
}

.about-me__item {
  padding: 10px 40px;
}

.table-header-x {
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

.table-header-y,
.table-header-x:first-child {
  border-right: 1px solid rgba(0, 0, 0, 0.1);
}

.section-two {
  z-index: 2;
  width: 100vw;
  position: relative;
  left: calc(-50vw + 50%);
  height: 100vh;
  padding: 0;
  margin: 0;
  background-image: linear-gradient(to bottom left, #AA9FAA, #E3DFE3);
}

/*
--------------------Media Queries-------------------
*/
@media all and (max-width: 500px) {

.project-list {
  grid-gap: 10px;
  -ms-grid-columns: 1fr;
  grid-template-columns: 1fr;
}

.project-list__item:last-child,
.project-list__full-row-item {
  grid-column: auto / auto;
  grid-row: auto / auto;
}

.personal-logo {
  width: 100%;
  height: auto;
  margin-left: 0;
}

body {
  position: relative;
  z-index: -1;
  /*placed behind the profile picture to be able to click that*/
}

.section-one {
  position: relative;
  z-index: -1;
  /*placed behind the profile picture to be able to click that*/
}

.profile {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding-bottom: 100px;
  position: relative;
  z-index: -1;
  /*placed behind the profile picture to be able to click that*/
}

.profile__picture-wrapper {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  position: relative;
  background-image: url(../img/profile-picture-static-phone.svg);
  z-index: 2;
  /* placed forward*/
}

.mobile-nav-list__item,
ul.mobile-nav-list li {
  z-index: 2;
}

.button {
  font-size: 90%;
}

h1 {
  font-size: 22px;
}

.toggler-location-row {
  font-size: 28px;
  padding: 0;
}

.page__footer {
  background-image: -webkit-gradient(linear, right top, left top, from(rgba(29, 0, 27, .1)), to(rgba(29, 0, 27, 1)));
  background-image: -o-linear-gradient(right, rgba(29, 0, 27, .1), rgba(29, 0, 27, 1));
  background-image: linear-gradient(to left, rgba(29, 0, 27, .1), rgba(29, 0, 27, 1));
  clear: both;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100vw;
  max-width: 100%;
  height: 60px;
}

.page__footer-text {
  margin: 0;
  color: #E3DFE3;
}

.social-media-phone ul {
  padding: 0;
}

.social-media-phone li {
  display: inline-block;
  padding: 0 5px;
}

.social-media-desktop {
  display: none;
}

.main__heading {
  font-size: 44px;
}

.navigation-list {
  display: none;
}

#menu-toggle {
  position: absolute;
  right: 30px;
  top: 88px;
}

.navigation-list__item:before,
.navigation-list__item:after {
  display: none;
}


}

@media all and (min-width: 500px) and (max-width: 750px) {
  .project-list {
    -ms-grid-columns: 1fr 10px 1fr;
    grid-template-columns: 1fr 1fr;
  }
}

@media all and (min-width: 750px) {

body{
  position: relative;
  z-index: -111;
}

  #menu-toggle {
    display: none;
  }

  .profile__picture-animated {
    margin-top: 5px;
  }

  .social-media-phone {
    display: none;
  }

  .project-list {
    grid-gap: 15px;
    padding: 0 35px;
  }

  .contact-form-wrapper {
    height: 700px;
  }
}
/* ... */

